# convert

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-patchport-v2-file-mapping.md  2026-05-07-patchport.md
docs/superpowers/specs/: 2026-05-07-patchport-design.md  2026-05-07-patchport-v2-file-mapping-design.md
patchport/: cli.py  exceptions.py  git.py  mapper.py  mapper_ui.py  patcher.py  reporter.py
tests/: test_cli.py  test_cli_v2.py  test_git.py  test_mapper.py  test_patcher.py  test_reporter.py
