[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchport"
version = "0.1.0"
description = "Apply upstream Git changes to your local codebase — without sharing a repository."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Gene Baik", email = "jongmin.baik@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
patchport = "patchport.cli:main"

[project.urls]
Homepage = "https://github.com/GeneBaik9/convert"
Repository = "https://github.com/GeneBaik9/convert"
Issues = "https://github.com/GeneBaik9/convert/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
